[gd_scene load_steps=2 format=3 uid="uid://dpv61m4o4a3j7"]

[ext_resource type="Script" path="res://Assets/Scripts/menu_principal.gd" id="1_ma301"]

[node name="menu_principal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ma301")

[node name="boton_jugar" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.5
offset_top = -129.0
offset_right = 137.5
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(137, 49)
action_mode = 0
text = "JUGAR"

[node name="boton_opciones" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 185.0
offset_top = 6.0
offset_right = 341.0
offset_bottom = 62.0
grow_vertical = 2
action_mode = 0
text = "OPCIONES
"

[node name="boton_coleccion" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -344.0
offset_top = 4.0
offset_right = -188.0
offset_bottom = 60.0
grow_horizontal = 0
grow_vertical = 2
action_mode = 0
text = "COLECCION
"

[node name="boton_salir" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.5
offset_top = -240.0
offset_right = 55.5
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 0
action_mode = 0
text = "SALIR"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[connection signal="pressed" from="boton_jugar" to="." method="_on_boton_jugar_pressed"]
[connection signal="pressed" from="boton_jugar" to="boton_jugar" method="_on_pressed"]
[connection signal="pressed" from="boton_opciones" to="." method="_on_boton_opciones_pressed"]
[connection signal="pressed" from="boton_opciones" to="boton_opciones" method="_on_pressed"]
[connection signal="pressed" from="boton_coleccion" to="." method="_on_boton_coleccion_pressed"]
[connection signal="pressed" from="boton_coleccion" to="boton_coleccion" method="_on_pressed"]
[connection signal="pressed" from="boton_salir" to="." method="_on_boton_salir_pressed"]
[connection signal="pressed" from="boton_salir" to="boton_salir" method="_on_pressed"]
